Fixed info page wrapping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -241,6 +241,7 @@ header a.selected {
 .info-section-row {
   width: 100%;
   display: flex;
+  flex-wrap: wrap;
   padding-bottom: 8%;
 }
 
